--- a/AxonTestTask/Base.lproj/Main.storyboard
+++ b/AxonTestTask/Base.lproj/Main.storyboard
@@ -14,14 +14,100 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jVI-gR-BLN">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UserCell" id="2wS-0t-OUc" customClass="UserCell" customModule="AxonTestTask" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2wS-0t-OUc" id="2eg-B6-vKD">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MW9-Gz-QUd">
+                                                    <rect key="frame" x="20" y="-42.5" width="128" height="128.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="Cow-er-rIR"/>
+                                                        <constraint firstAttribute="width" constant="128" id="sgv-Bw-Nte"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="3kC-S7-Lo3">
+                                                    <rect key="frame" x="156" y="-34.5" width="238" height="112.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2k9-Ep-U2s">
+                                                            <rect key="frame" x="0.0" y="0.0" width="64" height="32.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqV-54-Ya8">
+                                                            <rect key="frame" x="0.0" y="47" width="55" height="27.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLs-9Z-GXT">
+                                                            <rect key="frame" x="0.0" y="88.5" width="48" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3kC-S7-Lo3" firstAttribute="centerY" secondItem="2eg-B6-vKD" secondAttribute="centerY" id="EoU-j7-4nQ"/>
+                                                <constraint firstItem="MW9-Gz-QUd" firstAttribute="leading" secondItem="2eg-B6-vKD" secondAttribute="leadingMargin" id="NZf-fF-pDL"/>
+                                                <constraint firstItem="3kC-S7-Lo3" firstAttribute="leading" secondItem="MW9-Gz-QUd" secondAttribute="trailing" constant="8" id="Pdx-rn-xyG"/>
+                                                <constraint firstItem="MW9-Gz-QUd" firstAttribute="centerY" secondItem="2eg-B6-vKD" secondAttribute="centerY" id="THn-7v-udb"/>
+                                                <constraint firstItem="3kC-S7-Lo3" firstAttribute="height" secondItem="MW9-Gz-QUd" secondAttribute="height" multiplier="0.875" id="enW-0A-1bg"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="3kC-S7-Lo3" secondAttribute="trailing" id="k8K-zk-V5l"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="userCityLabel" destination="GLs-9Z-GXT" id="ufv-cv-ntT"/>
+                                            <outlet property="userCounryLabel" destination="jqV-54-Ya8" id="LnJ-75-cX7"/>
+                                            <outlet property="userImageView" destination="MW9-Gz-QUd" id="duO-b2-e9e"/>
+                                            <outlet property="userNameLabel" destination="2k9-Ep-U2s" id="NwR-b9-2wh"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jVI-gR-BLN" secondAttribute="trailing" id="3pc-B0-UCw"/>
+                            <constraint firstItem="jVI-gR-BLN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KZK-Eg-AN6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jVI-gR-BLN" secondAttribute="bottom" id="Y2Q-8N-qQP"/>
+                            <constraint firstItem="jVI-gR-BLN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mJo-dw-1S6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="xKh-5U-YdO"/>
+                    <connections>
+                        <outlet property="usersTableView" destination="jVI-gR-BLN" id="xPP-Js-aOG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="109.82142857142857"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="bjq-pE-khy">
+            <objects>
+                <viewController storyboardIdentifier="Details" id="4F5-9R-InS" customClass="DetailViewController" customModule="AxonTestTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sqy-7T-168">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="cid-mi-TNa"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yNZ-gC-x06" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1792" y="108"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OXF-yl-Oqt">
